--- a/wear/src/main/res/layout/rect_activity_microengage.xml
+++ b/wear/src/main/res/layout/rect_activity_microengage.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".mircoEMA.MicroEngageActivity"
+              tools:context=".MicroEngageActivity"
               tools:deviceIds="wear_square">
 
     <ImageButton
