--- a/wear/src/main/res/layout/rect_activity_prompt.xml
+++ b/wear/src/main/res/layout/rect_activity_prompt.xml
@@ -9,16 +9,16 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
 
-
     <Button
         android:id="@+id/optionOne"
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:text="@string/optionOne"
+        android:text="Sedentary"
         android:textColor="@android:color/black"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:maxLines="2"
+        android:textSize="15sp"
         android:ellipsize="start"
         android:background="@drawable/custom_button"/>
 
@@ -32,10 +32,11 @@
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:text="@string/optionTwo"
+        android:text="Light/Standing"
         android:textColor="@android:color/black"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="15sp"
+        android:maxLines="2"
         android:ellipsize="start"
         android:background="@drawable/custom_button"/>
 
@@ -49,10 +50,11 @@
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:text="@string/optionThree"
+        android:text="Moderate/Walking"
         android:textColor="@android:color/black"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:maxLines="2"
+        android:textSize="15sp"
         android:ellipsize="start"
         android:background="@drawable/custom_button"/>
 
@@ -66,10 +68,11 @@
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:text="@string/optionFour"
+        android:text="Vigorous"
         android:textColor="@android:color/black"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:maxLines="2"
+        android:textSize="15sp"
         android:ellipsize="start"
         android:background="@drawable/custom_button"/>
 
